# Network-Analysis-Al-Capone

./: .gitignore  README.md  makefile  pyproject.toml
report/: Network-Analysis-assigment-1-report.tex  Network-Analysis-assignment-1-report.tex
src/: assigment-1.ipynb  assignment-1.ipynb  project_nb.ipynb
