[tool.poetry]
name = "network-analysis-assignment1"
version = "0.1.0"
description = "Assignment number 1 for network analysis using bn-mouse-kasthuri_graph_v4"
authors = ["Szymon (siponek) Zinkowicz <szinkowicz+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black =  "^21.9"
seaborn = "^0.13.0"
numpy = "^1.21.2"
networkx = "^3.2.1"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
